# from-principle-to-practice

./: Cargp.toml  README.md  REASDME.md  from-principle-to-practice.md
src/async-echo-server/: Cargo.toml
src/async-echo-server/src/: epoll.rs  executor.rs  main.rs  reactor.rs  tcp_listener.rs  util.rs
src/crate-pre/: .gitignore  Cargo.toml  owid-covid-latest.csv
src/crate-pre/examples/: client.rs  lock.rs  server.rs
src/crate-pre/src/: case_four.rs  case_three.rs  case_two.rs  main.rs
src/dif-bin-and-lib/: Cargo.toml
src/dif-bin-and-lib/src/: case_one.rs  main.rs
src/epoll-example/: Cargo.toml
src/epoll-example/src/: epoll_syscall.rs  main.rs
src/grep/: Cargo.toml
src/grep/src/: error.rs  lib.rs  main.rs
src/html-to-md/: Cargo.toml  rust.md
src/html-to-md/src/: main.rs
src/http/: Cargo.toml
src/http/httpserver/: Cargo.toml
src/http/httpserver/data/: orders.json
src/http/httpserver/public/: 404.html  health.html  index.html  styles.css
src/http/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
src/http/src/: httprequest.rs  httpresponse.rs  lib.rs  main
src/http/tcpclient/: Cargo.toml
src/http/tcpclient/src/: main  main.rs
src/http/tcpserver/: Cargo.toml
src/http/tcpserver/src/: main  main.rs
src/httpie/: Cargo.toml
src/httpie/src/: main.rs  tests.rs
src/kv-server/: Cargo.toml  abi.proto  build.rs
src/kv-server/examples/: cdas.rs  client.rs  server.rs  server_model.rs  server_with_codec.rs
src/kv-server/src/: error.rs  lib.rs
src/kv-server/src/network/: frame.rs
src/kv-server/src/pb/: abi.rs  mod.rs
src/kv-server/src/service/: command_service.rs  mod.rs
src/kv-server/src/storage/: memory.rs  mod.rs  sleddb.rs  storage.rs
src/macros/: Cargo.toml
src/macros/examples/: query.rs  rule.rs
src/macros/src/: lib.rs
src/mpsc/: Cargo.toml
src/mpsc/src/: lib.rs  mpsc_channel.rs
src/my-crate/src/: config.rs
src/my-crate/src/config/: database.rs  poem_config.rs
src/my-project/: Cargo.toml
src/my-project/c1-lib/: Cargo.toml
src/my-project/c1-lib/examples/: test.rs
src/my-project/c1-lib/src/: lib.rs  test_c1.rs
src/my-project/c2-lib/: Cargo.toml
src/my-project/c3-bin/: Cargo.toml
src/orm/: Cargo.toml
src/orm/examples/: datafusion.rs  log.rs  sqlx.rs
src/orm/fixtures/: analyze.sql  log_schema.yml
src/parse-file/: Cargo.toml
src/parse-file/src/: refactor_four.rs  refactor_one.rs
src/principle-and-practice/: .gitignore  Cargo.toml
src/principle-and-practice/src/: lib.rs  mod_member.rs
src/principle-and-practice/src/borrow_check/: lifetime.rs  mod.rs  scope_and_nll.rs
src/principle-and-practice/src/ch02/: entry.rs  identifier.rs  mod.rs  note.rs
src/principle-and-practice/src/concurrency_system/: case_five.rs  main.rs  mod.rs  nolock_code.rs
src/principle-and-practice/src/error_handle/: error_handle.rs  mod.rs
src/principle-and-practice/src/error_handle/result_and_panic/: main.rs  origin.rs  refactor_thress.rs  refactor_two.rs
src/principle-and-practice/src/expression/: const_fn_and_generic.rs  mod.rs  position_and_value_expr.rs  semicolon_and_block_expr.rs
src/principle-and-practice/src/function_and_closure/: closures.rs  functions.rs  mod.rs
src/principle-and-practice/src/iterator/: iterator.rs  mod.rs
src/principle-and-practice/src/language_structure/: language_structure.rs  mod.rs
src/principle-and-practice/src/lexical_structure/: entry.rs  mod.rs  path.rs
src/principle-and-practice/src/meta_programming/: any_cases.rs  state_macro.rs
src/principle-and-practice/src/mod_member/: address.rs  age.rs  gender.rs  name.rs
src/principle-and-practice/src/ownership/: copy_and_copy_trait.rs  mod.rs  move_and_drop_trait.rs
src/principle-and-practice/src/pattern_match/: mod.rs  pattern_match.rs
src/principle-and-practice/src/smart_pointer/: mod.rs  smart_pointer.rs
src/principle-and-practice/src/threads_and_concurrency/: concurrency.rs  event_loop.rs  mod.rs  threads_and_concurrency.rs
src/principle-and-practice/src/trait_and_generics/: mod.rs  trait_object.rs  traits.rs
src/principle-and-practice/src/trait_impl/: mod.rs  trait_impl.rs  traits.rs
src/principle-and-practice/src/type_system/: collection.rs  contain_type.rs  custom_enum_and_union.rs  custom_struct.rs  generic.rs  map.rs  mod.rs  string.rs  string_and_char.rs
src/process-macro/: Cargo.toml
src/process-macro/src/: lib.rs
src/queryer/: Cargo.toml
src/queryer/examples/: covid.rs  dialect.rs
src/queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
src/spin-lock/: Cargo.toml
src/spin-lock/examples/: atomic_lock.rs  spin_lock.rs
src/spin-lock/src/: lib.rs
src/str-2-2-3-1/: Cargo.toml
src/string/src/: main.rs
src/thumbor/: Cargo.toml  abi.proto  build.rs  type.proto
src/thumbor/src/: main.rs
src/thumbor/src/data/: r#type.rs
src/thumbor/src/engine/: engine.rs  mod.rs  photon.rs
src/thumbor/src/pb/: abi.rs  mod.rs
src/toml-conf/: Cargo.toml
src/toml-conf/conf/: Poem.toml
src/toml-conf/src/: environment.rs  lib.rs
src/toml-conf/src/config/: basic_config.rs  error.rs
src/web-service/: Cargo.toml
src/web-service/examples/: rocket_json.rs  tcp_client.rs  tcp_server.rs  tokio_client.rs  tokio_server.rs
ws/webservice/: Cargo.toml
ws/webservice/webservice/: Cargo.toml
ws/webservice/webservice/src/: handlers.rs  models.rs  routers.rs  state.rs
