[package]
name = "crate-pre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
fxhash = "0.2.1"
lazy_static = "1.4.0"
mysql = "23.0.1"
postgres = "0.19.4"
redis = "0.22.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
v = "0.1.0"
