[package]
name = "grep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = {version ="4.1.7",features = ["derive"]}

colored = "2.0.0"
glob = "0.3.1"
itertools = "0.10.5"
rayon = "1.6.1"
regex = "1.7.1"
thiserror = "1.0.38"
