[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = {version ="4.0.15",features = ["derive"] }
colored = "2.0.0"
jsonxf = "1.1.1"
mime = "0.3.16"
reqwest ={ version ="0.11.12", default-features = false, features = ["json", "rustls-tls"]}
syntect = "5.0.0"
tokio = {version = "1.21.2",features = ["full"]}
