[package]
name = "kv-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-prost = "0.2.1"
bytes = "1.4.0"
dashmap = "5.4.0"
futures = "0.3.26"
kv = "0.24.0"
prost = "0.11.8"

tokio = { version = "1", features = ["full", "rt", "rt-multi-thread", "io-util", "macros", "net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
prost-build = "0.11.8"
