[package]
name = "kv-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "client"

[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
dashmap = "5.4.0"
http = "0.2.9"
prost = "0.8" # 处理 protobuf 的代码
serde ={version = "1.0.152",features = ["derive"]}
sled = "0.34.7"
tempfile = "3.4.0"
thiserror = "1.0.38"
tracing = "0.1" # 日志处理

[dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.2.1" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
tracing-subscriber = "0.2" # 日志处理

[build-dependencies]
prost-build = "0.8" # 编译 protobuf
